--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.6.2"
   },
   "devDependencies": {
